--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  assets:
-   - Images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -72,3 +71,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/img/
